--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="free ecommerce template bootstrap 5" />
   <meta name="keywords" content="e-commerce, template, bootstrap, free" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="dns-prefetch" href="//cdn.buymeacoffee.com">
-  <link rel="dns-prefetch" href="//www.google-analytics.com">
-  <link rel="dns-prefetch" href="//www.googletagmanager.com">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />  
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,31 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://product-gallery.cloudinary.com/all.js" type="text/javascript"></script>
   <title>React App</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="//www.googletagmanager.com/gtag/js?id=UA-46102911-7"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'UA-46102911-7');
-  </script>
-
+  <div id="root"></div>  
 </body>
 
 </html>
