--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />    
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />  
   <script src="https://product-gallery.cloudinary.com/all.js" type="text/javascript"></script>  
-  <link rel="preconnect" href="https://res.cloudinary.com/">
+  <link rel="preconnect" href="https://react-workshop.mo.cloudinary.net/">
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
