defer the Cloudinary JS code

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />  
   <script src="https://product-gallery.cloudinary.com/all.js" type="text/javascript" defer></script>  
   <link rel="preconnect" href="https://react-workshop.mo.cloudinary.net/">
+  <link rel="preconnect" href="https://res.cloudinary.com/">
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
